--- a/cdonation.ui
+++ b/cdonation.ui
@@ -101,7 +101,7 @@
         </size>
        </property>
        <property name="text">
-        <string>OK</string>
+        <string>Close</string>
        </property>
        <property name="default">
         <bool>true</bool>
