--- a/cloadingdlg.ui
+++ b/cloadingdlg.ui
@@ -61,9 +61,26 @@
     <string/>
    </property>
   </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>0</y>
+     <width>111</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
   <zorder>label_2</zorder>
   <zorder>progressBar</zorder>
   <zorder>label</zorder>
+  <zorder>label_3</zorder>
  </widget>
  <resources/>
  <connections/>
