--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -844,7 +844,7 @@
         <number>1</number>
        </property>
        <property name="currentIndex">
-        <number>1</number>
+        <number>2</number>
        </property>
        <property name="tabSpacing">
         <number>6</number>
@@ -854,7 +854,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>274</width>
+          <width>353</width>
           <height>368</height>
          </rect>
         </property>
@@ -1038,7 +1038,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>331</width>
+          <width>336</width>
           <height>511</height>
          </rect>
         </property>
@@ -1478,19 +1478,48 @@
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>0</y>
-          <width>257</width>
-          <height>524</height>
+          <y>-152</y>
+          <width>336</width>
+          <height>520</height>
          </rect>
         </property>
         <attribute name="label">
          <string>Event information</string>
         </attribute>
-        <layout class="QFormLayout" name="formLayout_2">
-         <property name="fieldGrowthPolicy">
-          <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-         </property>
-         <item row="2" column="0" colspan="2">
+        <layout class="QVBoxLayout" name="verticalLayout_4">
+         <item>
+          <widget class="QLabel" name="label_10">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">color : rgb(170, 0, 0)</string>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="verticalSpacer_5">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeType">
+            <enum>QSizePolicy::Fixed</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>4</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
           <layout class="QHBoxLayout" name="horizontalLayout_5">
            <item>
             <widget class="QComboBox" name="comboBox"/>
@@ -1500,7 +1529,7 @@
            </item>
           </layout>
          </item>
-         <item row="3" column="0" colspan="2">
+         <item>
           <spacer name="verticalSpacer_3">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -1516,7 +1545,7 @@
            </property>
           </spacer>
          </item>
-         <item row="4" column="0" colspan="2">
+         <item>
           <widget class="QTreeView" name="treeView_2">
            <property name="editTriggers">
             <set>QAbstractItemView::NoEditTriggers</set>
@@ -1538,49 +1567,80 @@
            </property>
           </widget>
          </item>
-         <item row="6" column="0" colspan="2">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_14">
+           <item>
+            <widget class="QPushButton" name="pushButton_10">
+             <property name="text">
+              <string>Clear all</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_4">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QPushButton" name="pushButton_23">
+             <property name="text">
+              <string>Search new event...</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
           <widget class="QLabel" name="label_6">
            <property name="text">
             <string>Time</string>
            </property>
           </widget>
          </item>
-         <item row="7" column="0" colspan="2">
+         <item>
           <widget class="QLineEdit" name="lineEdit">
            <property name="readOnly">
             <bool>true</bool>
            </property>
           </widget>
          </item>
-         <item row="8" column="0" colspan="2">
+         <item>
           <widget class="QLabel" name="label_7">
            <property name="text">
             <string>Description</string>
            </property>
           </widget>
          </item>
-         <item row="9" column="0" colspan="2">
+         <item>
           <widget class="QLineEdit" name="lineEdit_3">
            <property name="readOnly">
             <bool>true</bool>
            </property>
           </widget>
          </item>
-         <item row="10" column="0" colspan="2">
+         <item>
           <widget class="QLabel" name="label_8">
            <property name="text">
             <string>Visibility</string>
            </property>
           </widget>
          </item>
-         <item row="11" column="0" colspan="2">
+         <item>
           <widget class="QLineEdit" name="lineEdit_2">
            <property name="readOnly">
             <bool>true</bool>
            </property>
           </widget>
          </item>
-         <item row="12" column="0">
+         <item>
           <spacer name="verticalSpacer_4">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -1596,14 +1656,14 @@
            </property>
           </spacer>
          </item>
-         <item row="13" column="0" colspan="2">
+         <item>
           <widget class="Line" name="line_5">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
-         <item row="14" column="0" colspan="2">
+         <item>
           <widget class="QLabel" name="label_9">
            <property name="font">
             <font>
@@ -1616,7 +1676,7 @@
            </property>
           </widget>
          </item>
-         <item row="15" column="0" colspan="2">
+         <item>
           <widget class="QTreeView" name="treeView_3">
            <property name="toolTip">
             <string>Click change time to event</string>
@@ -1635,7 +1695,7 @@
            </property>
           </widget>
          </item>
-         <item row="17" column="0" colspan="2">
+         <item>
           <widget class="QTextEdit" name="textEdit">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -1654,7 +1714,7 @@
            </property>
           </widget>
          </item>
-         <item row="18" column="0" colspan="2">
+         <item>
           <layout class="QHBoxLayout" name="horizontalLayout_9">
            <item>
             <widget class="QCheckBox" name="checkBox_2">
@@ -1678,45 +1738,6 @@
            </item>
           </layout>
          </item>
-         <item row="0" column="0" colspan="2">
-          <widget class="QLabel" name="label_10">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">color : rgb(170, 0, 0)</string>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="0" colspan="2">
-          <spacer name="verticalSpacer_5">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeType">
-            <enum>QSizePolicy::Fixed</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>4</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item row="5" column="0">
-          <widget class="QPushButton" name="pushButton_10">
-           <property name="text">
-            <string>Clear all</string>
-           </property>
-          </widget>
-         </item>
         </layout>
        </widget>
        <widget class="QWidget" name="page_moon">
@@ -1724,7 +1745,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>279</width>
+          <width>353</width>
           <height>368</height>
          </rect>
         </property>
@@ -1912,7 +1933,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>157</width>
+          <width>336</width>
           <height>431</height>
          </rect>
         </property>
@@ -2015,7 +2036,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>101</width>
+          <width>353</width>
           <height>368</height>
          </rect>
         </property>
@@ -2163,7 +2184,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>468</width>
+          <width>353</width>
           <height>368</height>
          </rect>
         </property>
