--- a/csavetm.ui
+++ b/csavetm.ui
@@ -42,6 +42,16 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
+        <widget class="QCheckBox" name="checkBox">
+         <property name="text">
+          <string>Save map position</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
