--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1065,7 +1065,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>331</width>
+          <width>308</width>
           <height>669</height>
          </rect>
         </property>
@@ -1536,7 +1536,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>397</width>
+          <width>451</width>
           <height>520</height>
          </rect>
         </property>
@@ -3664,12 +3664,18 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionSave_time_mark">
    <property name="text">
-    <string>Save time mark...</string>
+    <string>Save time and map position...</string>
+   </property>
+   <property name="toolTip">
+    <string>Save time and map position</string>
    </property>
   </action>
   <action name="actionRestore_time_mark">
    <property name="text">
-    <string>Restore time mark...</string>
+    <string>Restore time and map position...</string>
+   </property>
+   <property name="toolTip">
+    <string>Restore time and map position</string>
    </property>
   </action>
   <action name="actionDay_event">
