Download satellites & fits header dialog

--- a/csetting.ui
+++ b/csetting.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>878</width>
-    <height>503</height>
+    <width>885</width>
+    <height>512</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>5</number>
      </property>
      <property name="documentMode">
       <bool>false</bool>
@@ -171,23 +171,32 @@
             <enum>QFrame::StyledPanel</enum>
            </property>
            <property name="currentIndex">
-            <number>7</number>
+            <number>0</number>
            </property>
            <widget class="QWidget" name="stackedWidget_2Page1">
             <layout class="QVBoxLayout" name="verticalLayout_18">
              <item>
               <layout class="QGridLayout" name="gridLayout_2">
-               <item row="8" column="0">
-                <widget class="QLabel" name="label_61">
+               <item row="10" column="0">
+                <widget class="QCheckBox" name="cb_properMotion">
                  <property name="text">
-                  <string>Star size factor</string>
+                  <string>Show proper motion vector</string>
                  </property>
                 </widget>
                </item>
-               <item row="7" column="2">
-                <widget class="CFontColorButton" name="pushButton_5">
-                 <property name="text">
-                  <string/>
+               <item row="12" column="0">
+                <widget class="QSpinBox" name="sb_pmYears">
+                 <property name="suffix">
+                  <string> year(s)</string>
+                 </property>
+                 <property name="minimum">
+                  <number>-2000</number>
+                 </property>
+                 <property name="maximum">
+                  <number>2000</number>
+                 </property>
+                 <property name="value">
+                  <number>250</number>
                  </property>
                 </widget>
                </item>
@@ -198,24 +207,53 @@
                  </property>
                 </widget>
                </item>
-               <item row="9" column="2">
-                <widget class="CFontColorButton" name="pushButton_6">
+               <item row="1" column="1">
+                <spacer name="horizontalSpacer_7">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+               <item row="2" column="0">
+                <widget class="QLabel" name="label_2">
+                 <property name="text">
+                  <string>Show bayer letter from FOV</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="4" column="0">
+                <widget class="QLabel" name="label_3">
+                 <property name="text">
+                  <string>Show flamsteed number from FOV</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="0">
+                <widget class="QDoubleSpinBox" name="doubleSpinBox">
+                 <property name="suffix">
+                  <string>°</string>
+                 </property>
+                 <property name="decimals">
+                  <number>0</number>
+                 </property>
+                 <property name="minimum">
+                  <double>1.000000000000000</double>
+                 </property>
+                 <property name="maximum">
+                  <double>90.000000000000000</double>
+                 </property>
+                </widget>
+               </item>
+               <item row="5" column="2">
+                <widget class="CFontColorButton" name="pushButton_4">
                  <property name="text">
                   <string/>
-                 </property>
-                </widget>
-               </item>
-               <item row="4" column="2">
-                <widget class="QLabel" name="label_5">
-                 <property name="text">
-                  <string>Proper name font &amp; color</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="6" column="2">
-                <widget class="QLabel" name="label_6">
-                 <property name="text">
-                  <string>Bayer letter font &amp; color</string>
                  </property>
                 </widget>
                </item>
@@ -242,15 +280,29 @@
                  </property>
                 </widget>
                </item>
-               <item row="8" column="2">
-                <widget class="QLabel" name="label_7">
+               <item row="8" column="0">
+                <widget class="QLabel" name="label_61">
                  <property name="text">
-                  <string>Flamsteed number font &amp; color</string>
+                  <string>Star size factor</string>
                  </property>
                 </widget>
                </item>
-               <item row="5" column="2">
-                <widget class="CFontColorButton" name="pushButton_4">
+               <item row="0" column="2">
+                <widget class="QLabel" name="label_4">
+                 <property name="text">
+                  <string>Star bitmap</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="4" column="2">
+                <widget class="QLabel" name="label_5">
+                 <property name="text">
+                  <string>Proper name font &amp; color</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="7" column="2">
+                <widget class="CFontColorButton" name="pushButton_5">
                  <property name="text">
                   <string/>
                  </property>
@@ -263,15 +315,18 @@
                  </property>
                 </widget>
                </item>
-               <item row="0" column="2">
-                <widget class="QLabel" name="label_4">
-                 <property name="text">
-                  <string>Star bitmap</string>
+               <item row="1" column="2">
+                <widget class="QComboBox" name="comboBox">
+                 <property name="iconSize">
+                  <size>
+                   <width>24</width>
+                   <height>24</height>
+                  </size>
                  </property>
                 </widget>
                </item>
-               <item row="1" column="0">
-                <widget class="QDoubleSpinBox" name="doubleSpinBox">
+               <item row="5" column="0">
+                <widget class="QDoubleSpinBox" name="doubleSpinBox_3">
                  <property name="suffix">
                   <string>°</string>
                  </property>
@@ -299,13 +354,17 @@
                  </property>
                 </spacer>
                </item>
-               <item row="1" column="2">
-                <widget class="QComboBox" name="comboBox">
-                 <property name="iconSize">
-                  <size>
-                   <width>24</width>
-                   <height>24</height>
-                  </size>
+               <item row="8" column="2">
+                <widget class="QLabel" name="label_7">
+                 <property name="text">
+                  <string>Flamsteed number font &amp; color</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="6" column="2">
+                <widget class="QLabel" name="label_6">
+                 <property name="text">
+                  <string>Bayer letter font &amp; color</string>
                  </property>
                 </widget>
                </item>
@@ -313,13 +372,6 @@
                 <widget class="QCheckBox" name="checkBox_3">
                  <property name="text">
                   <string>Use spectral color</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="2" column="0">
-                <widget class="QLabel" name="label_2">
-                 <property name="text">
-                  <string>Show bayer letter from FOV</string>
                  </property>
                 </widget>
                </item>
@@ -339,30 +391,7 @@
                  </property>
                 </widget>
                </item>
-               <item row="4" column="0">
-                <widget class="QLabel" name="label_3">
-                 <property name="text">
-                  <string>Show flamsteed number from FOV</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="5" column="0">
-                <widget class="QDoubleSpinBox" name="doubleSpinBox_3">
-                 <property name="suffix">
-                  <string>°</string>
-                 </property>
-                 <property name="decimals">
-                  <number>0</number>
-                 </property>
-                 <property name="minimum">
-                  <double>1.000000000000000</double>
-                 </property>
-                 <property name="maximum">
-                  <double>90.000000000000000</double>
-                 </property>
-                </widget>
-               </item>
-               <item row="10" column="0">
+               <item row="13" column="0">
                 <spacer name="verticalSpacer_4">
                  <property name="orientation">
                   <enum>Qt::Vertical</enum>
@@ -375,18 +404,19 @@
                  </property>
                 </spacer>
                </item>
-               <item row="1" column="1">
-                <spacer name="horizontalSpacer_7">
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
+               <item row="9" column="2">
+                <widget class="CFontColorButton" name="pushButton_6">
+                 <property name="text">
+                  <string/>
                  </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>40</width>
-                   <height>20</height>
-                  </size>
+                </widget>
+               </item>
+               <item row="11" column="0">
+                <widget class="QLabel" name="label_100">
+                 <property name="text">
+                  <string>Vector size</string>
                  </property>
-                </spacer>
+                </widget>
                </item>
               </layout>
              </item>
@@ -3850,6 +3880,9 @@
          <property name="currentIndex">
           <number>0</number>
          </property>
+         <property name="elideMode">
+          <enum>Qt::ElideNone</enum>
+         </property>
          <widget class="QWidget" name="tab_8">
           <attribute name="title">
            <string>Comets</string>
@@ -4026,6 +4059,52 @@
              </item>
              <item>
               <spacer name="horizontalSpacer_5">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
+           </item>
+          </layout>
+         </widget>
+         <widget class="QWidget" name="tab_17">
+          <attribute name="title">
+           <string>Satellites</string>
+          </attribute>
+          <layout class="QVBoxLayout" name="verticalLayout_80">
+           <item>
+            <widget class="QTreeWidget" name="treeWidgetSat">
+             <property name="contextMenuPolicy">
+              <enum>Qt::CustomContextMenu</enum>
+             </property>
+             <property name="alternatingRowColors">
+              <bool>true</bool>
+             </property>
+             <column>
+              <property name="text">
+               <string notr="true">1</string>
+              </property>
+             </column>
+            </widget>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_17">
+             <item>
+              <widget class="QPushButton" name="pushButton_61">
+               <property name="text">
+                <string>Reset to default</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_17">
                <property name="orientation">
                 <enum>Qt::Horizontal</enum>
                </property>
