--- a/csatellitedlg.ui
+++ b/csatellitedlg.ui
@@ -39,6 +39,13 @@
            </widget>
           </item>
           <item>
+           <widget class="QPushButton" name="pushButton_6">
+            <property name="text">
+             <string>Download...</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <spacer name="verticalSpacer">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
